[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entities/shootyboi/subscene/projectile.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.788235, 0.517647, 0.466667, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.05, 0.05, 0.05 )

[node name="projectile" type="Area" groups=[
"projectile",
]]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="death_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_projectile_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_life_timeout"]
